intermediate/05/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'

spec:
  tls:
    - hosts:
        - ak-k8s-sock-shop.in.ft.com
      secretName: front-end-tls
  rules:
  - host: ak-k8s-sock-shop.in.ft.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
